# em_django

./: pyproject.toml
dogs_api/: manage.py
dogs_api/api/: apps.py
dogs_api/api/v1/: urls.py
dogs_api/api/v1/dogs/: serializers.py  views.py
dogs_api/core/: apps.py  constants.py  extra_fields.py  models.py
dogs_api/dogs/: admin.py  apps.py  models.py
dogs_api/dogs/migrations/: 0001_initial.py  0002_alter_breed_options_alter_dog_options.py
dogs_api/dogs_api/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_breeds.py  test_dogs.py
