[tool.poetry]
name = "em-django"
version = "0.1.0"
description = ""
authors = ["Nikita Smykov <132088678+Apicqq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
mypy = "^1.13.0"
ruff = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version="py311"
exclude = [
    "*migrations/*",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".env",
    ".venv"
]
line-length = 79
indent-width = 4
output-format = "grouped"

[tool.ruff.lint]
select = [
    # pep8-naming
    "N",
    #pyflakes
    "F",
    #pycodestyle
    "E",
    "W",
    #mccabe
    "C90",
    #isort
    "I",
    #pydocstyle
    "D",
    #flake8-bugbear
    "B",
    #flake8-commas
    "COM",
    #flake8-django
    "DJ",
    #flake8-print
    "T20",
    #flake8-pie
    "PIE",
    #flake8-quotes
    "Q",
    #eradicate
    "ERA",
    #flake8-type-checking
    "TCH",
]

ignore = ["D100", "D103", "T201", "D104", "D106", "D203", "B012", "B904", "COM819", "D212", "I001", "ERA001", "N999"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
quote-style = "double"

[tool.ruff.lint."flake8-quotes"]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings*" = ["E501", "F405"]
